--- a/templates/index.html
+++ b/templates/index.html
@@ -26,14 +26,11 @@
         </div> <!-- End slider-wrap -->
     </div> <!-- End carrousel -->
 
-    <div class="container_glass_box glass">
-        <div class="text_glass">
-            <h1 id="title">DO YOU KNOW YOUR <span style="color: #1DB954;">SPOTIFY</span> SONGS?</h1>
-        </div>
+    <div id="container_glass_box">
+        <h1>DO YOU KNOW YOUR <span style="color: #1DB954;">SPOTIFY</span> SONGS?</h1>
     </div>
-    <div id="text_main_manual">
-        <h1>FIND THE <span id="blur-text"><del>MISSING</del></span> LYRICS</h1>
-    </div>
+    
+    <h1 id="main_title">FIND THE <span id="blur_text"><del>MISSING</del></span> LYRICS</h1>
 
     <hr>
 
