--- a/static/css/selection.css
+++ b/static/css/selection.css
@@ -1,7 +1,7 @@
 
-    body {
-        color: #5d9f80d3;/*var(--text-secondary);*/
-    }
+    /* body {
+        color: #5d9f80d3;  *var(--text-secondary);?*
+    } */
 
       /* Profile section layout */  
     .user_profile_wrapper {
@@ -118,9 +118,6 @@
       filter: drop-shadow(0px 0px 10px rgba(0, 255, 255, 0.8));
     }
     
-    
-
-
   @media screen and (max-width: 1000px) {
       /* 100vw for better spacing between elements */
     .user_profile_section {
