--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,7 @@
 /* Variable and preset to use around the all app */
 :root {
   font-family: 'Montserrat', sans-serif;
-  --text-primary: rgba(204, 184, 184, 0.7);
+  --text-primary: rgba(204, 184, 184, 0.9);
   --text-secondary: #5d9f80d3;
   --bg-primary:  #010409;
   --bg-secondary:  hsl(240, 5%, 4%);
@@ -29,43 +29,41 @@ hr {
   opacity: 0.1;
 }
 
-/* prevent unexpected behaviour with the carrousel main page*/ 
-html {
-  scroll-behavior: smooth;
-  background-color: var(--bg-secondary);
-}
+  /* prevent unexpected behaviour with the carrousel main page*/ 
+  html {
+    scroll-behavior: smooth;
+    background-color: var(--bg-secondary);
+  }
 
-body {
-  color: rgba(255, 255, 255, 0.9);
-  background-color: var(--bg-secondary);  
-}
-
-
-/* Change width of the default scrollbar */
-body::-webkit-scrollbar {
-  width: 1rem;
-}
-  /* Change the color of the track */
-body::-webkit-scrollbar-track {
-  background: #1e1e24;
-}
-  /* Change the thumb (scrollable part */
-body::-webkit-scrollbar-thumb {
-  background: rgba(116, 105, 105, 0.3);
-  border-radius: 10px;
-}
+  body {
+    color: rgba(255, 255, 255, 0.9);
+    background-color: var(--bg-secondary);  
+    overflow-x: hidden; /* TO CHECK */
+  }
 
 
+  /* Change width of the default scrollbar */
+  body::-webkit-scrollbar {
+    width: 1rem;
+  }
+    /* Change the color of the track */
+  body::-webkit-scrollbar-track {
+    background: #1e1e24;
+  }
+    /* Change the thumb (scrollable part */
+  body::-webkit-scrollbar-thumb {
+    background: rgba(116, 105, 105, 0.3);
+    border-radius: 10px;
+  }
 
+  /* Thinner scrollbar on smaller screen */
+  @media (max-width: 600px) {
+    body::-webkit-scrollbar { 
+        width: 0.9rem;
+    }
+  }
 
-
-
-
-
-
-
-
-/* nav Navbar > ul navbar_nav > li nav_item > a nav_link > items inside link */
+/* nav Navbar > ul navbar_nav > li nav_item > a nav_link > items inside link logo / infotext*/
 #navbar {
 
   /* Varible for the Light/Night toggle button  */
@@ -120,8 +118,6 @@ body::-webkit-scrollbar-thumb {
   /* color: var(--text-secondary); Too change */
 }
 
-
-
 /* Push last item to the opposite side by settings his margin to the max */
 .nav-item:last-child {
   margin-right: auto;
@@ -137,32 +133,6 @@ body::-webkit-scrollbar-thumb {
 }      
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Night/light Mod button */  
 /* SVG styling */
 svg {
@@ -174,14 +144,14 @@ svg {
 }
 
 svg#svg_day {
-  left: var(--svg_padding);
+  right: var(--svg_padding);
   top: 50%;
   transform: translateY(-50%) rotate(-10deg);
   filter: drop-shadow(3px 3px 4px rgba(0, 0, 0, 0.5));
 }
 
 svg#svg_night {
-  left: var(--svg_padding);
+  right: var(--svg_padding);
   top: 50%;
   transform: translateY(-50%);
   z-index: 10;
@@ -226,13 +196,13 @@ input[type="checkbox"].switch + label::before {
 }
 
 /* Button state: unchecked */
-input[type="checkbox"].switch:not(:checked) + label::before {
+input[type="checkbox"].switch:checked + label::before {
   background: linear-gradient(to right, #f4d03fc6, #f8e7a1, #c4b8a5, #a9a9a9, #958787);
   box-shadow: 3px 7px 15px rgba(0, 0, 0, 0.8);
 }
 
 /* Button state: checked */
-input[type="checkbox"].switch:checked + label::before {
+input[type="checkbox"].switch:not(:checked) + label::before {
   background: linear-gradient(
     to bottom,
     hsl(240, 5%, 6%) 0%,
@@ -245,19 +215,19 @@ input[type="checkbox"].switch:checked + label::before {
 
 /* SVG animations for toggling states */
 input[type="checkbox"].switch:checked + label svg#svg_day {
-  animation: offset 2s ease-in-out forwards, fadeOut 2s ease-in-out forwards;
-}
-
-input[type="checkbox"].switch:checked + label svg#svg_night {
-  animation: offset 2s ease-in-out forwards, fadeIn 2s ease-in-out forwards;
-}
-
-input[type="checkbox"].switch:not(:checked) + label svg#svg_day {
   animation: offsetReverse 2s ease-in-out forwards, fadeIn 2s ease-in-out forwards;
 }
 
-input[type="checkbox"].switch:not(:checked) + label svg#svg_night {
+input[type="checkbox"].switch:checked + label svg#svg_night {
   animation: offsetReverse 2s ease-in-out forwards, fadeOut 2s ease-in-out forwards;
+}
+
+input[type="checkbox"].switch:not(:checked) + label svg#svg_day {
+  animation: offset 2s ease-in-out forwards, fadeOut 2s ease-in-out forwards;
+}
+
+input[type="checkbox"].switch:not(:checked) + label svg#svg_night {
+  animation: offset 2s ease-in-out forwards, fadeIn 2s ease-in-out forwards;
 }
 
 /* Keyframes */
@@ -302,7 +272,6 @@ input[type="checkbox"].switch:not(:checked) + label svg#svg_night {
   50% { opacity: 1; }
   100% { opacity: 1; }
 }
-
 
 .nav-item.no-animate svg {
   animation: none !important;
